--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -193,6 +193,28 @@
              color: var(--color-button-text) !important;
              border-color: var(--color-card) !important;
         }
+        /* Mobile-first: Fix Flowchart layout (Request 3 - Flowchart overlap fix) */
+        .flowchart-container-fix {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            /* Ensure children stack vertically without crowding */
+            gap: 20px; /* Increased vertical space between elements */
+        }
+        .flowchart-arrow.vertical {
+            /* Adjust the arrow for vertical stacking */
+            transform: rotate(90deg);
+        }
+        @media (min-width: 768px) {
+            .flowchart-container-fix {
+                flex-direction: row; /* Horizontal layout on desktop */
+                gap: 0; /* Let md:space-x-8 handle spacing */
+            }
+            .flowchart-arrow.vertical {
+                transform: rotate(0deg);
+            }
+        }
         /* Modal specific styles for UPSC page to fit between header and nav on mobile */
         .modal-overlay {
             position: fixed;
@@ -209,6 +231,7 @@
             visibility: hidden;
             transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
             padding: 2rem 1rem;
+            overflow-y: auto; /* Enable scrolling for the overlay container on PC too */
         }
         @media (max-width: 1023px) {
             .modal-overlay {
@@ -224,6 +247,14 @@
                 overflow-y: auto; /* Allow scrolling inside the modal */
             }
         }
+        @media (min-width: 1024px) {
+             .modal-content {
+                /* PC Width Increase (Request 1) */
+                max-width: 1200px;
+                width: 90%;
+             }
+        }
+
 
         .modal-overlay.active {
             opacity: 1;
@@ -234,7 +265,7 @@
             border-radius: 1.25rem;
             padding: 2rem;
             box-shadow: 0 15px 25px -5px rgba(255, 215, 0, 0.2), 0 10px 10px -5px rgba(255, 215, 0, 0.1);
-            max-width: 900px;
+            max-width: 900px; /* Base for PC */
             width: 90%;
             position: relative;
             transform: translateY(-50px);
@@ -322,6 +353,18 @@
         .service-category-heading {
             color: var(--electric-gold-glow);
             border-bottom: 1px solid var(--electric-gold-glow);
+        }
+        /* 8th Schedule Language Grid Fix (Request 3) */
+        .language-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 0.75rem;
+            margin-top: 1rem;
+        }
+        /* Ensure the cards inside the language grid are spaced out */
+        .language-item {
+             padding: 0.75rem;
+             margin: 0;
         }
     </style>
 </head>
@@ -475,17 +518,20 @@
             <section class="card">
                 <h2 id="sec2-title" class="text-3xl font-bold section-heading text-center">2. परीक्षा प्रक्रिया: 3 आसान और महत्वपूर्ण चरण 🎯</h2>
                 <p id="sec2-p1" class="text-lg text-center mb-10 max-w-3xl mx-auto">UPSC की सिविल सेवा परीक्षा एक साल तक चलती है और इसके 3 मुख्य पड़ाव हैं। हर पड़ाव आपको अगले चरण तक ले जाता है, और अंत में आप अपनी मनचाही सेवा में पहुँचते हैं।</p>
-                <div class="flex flex-col md:flex-row items-center justify-center space-y-6 md:space-y-0 md:space-x-8 lg:space-x-12">
+                <!-- Flowchart Container Fix Applied (Request 3 - Flowchart overlap fix) -->
+                <div class="flowchart-container-fix md:space-x-8 lg:space-x-12">
                     <div class="text-center flex flex-col items-center">
                         <div class="w-36 h-36 flex items-center justify-center border-4 rounded-full flowchart-step font-bold text-lg p-3 text-center leading-tight" data-modal-target="prelimsMainModal"><span id="sec2-step1-title">चरण 1:</span><br><span id="sec2-step1-name">प्रीलिम्स</span></div>
                         <p id="sec2-step1-desc" class="mt-3 font-semibold text-text-light">स्क्रीनिंग टेस्ट</p>
                     </div>
-                    <div class="text-5xl font-light flowchart-arrow transform md:rotate-0 rotate-90">→</div>
+                    <!-- Added vertical class to enable rotation only on mobile via CSS fix -->
+                    <div class="text-5xl font-light flowchart-arrow vertical">→</div>
                     <div class="text-center flex flex-col items-center">
                         <div class="w-36 h-36 flex items-center justify-center border-4 rounded-full flowchart-step font-bold text-lg p-3 text-center leading-tight" data-modal-target="mainsMainModal"><span id="sec2-step2-title">चरण 2:</span><br><span id="sec2-step2-name">मेन्स</span></div>
                         <p id="sec2-step2-desc" class="mt-3 font-semibold text-text-light">लिखने वाली परीक्षा</p>
                     </div>
-                    <div class="text-5xl font-light flowchart-arrow transform md:rotate-0 rotate-90">→</div>
+                    <!-- Added vertical class to enable rotation only on mobile via CSS fix -->
+                    <div class="text-5xl font-light flowchart-arrow vertical">→</div>
                     <div class="text-center flex flex-col items-center">
                         <div class="w-36 h-36 flex items-center justify-center border-4 rounded-full flowchart-step font-bold text-lg p-3 text-center leading-tight" data-modal-target="interviewModal"><span id="sec2-step3-title">चरण 3:</span><br><span id="sec2-step3-name">साक्षात्कार</span></div>
                         <p id="sec2-step3-desc" class="mt-3 font-semibold text-text-light">व्यक्तित्व टेस्ट</p>
@@ -610,28 +656,28 @@
 
                 <div class="mt-8 text-center">
                     <h4 class="text-xl font-bold text-golden-dark mb-4">✍️ दोनों पेपर्स (पेपर-A & पेपर-B) में क्या पूछा जाता है?</h4>
-                    <ul class="list-disc list-inside text-base text-text-light max-w-xl mx-auto space-y-1">
-        
-                `पेपर-A (अनिवार्य भारतीय भाषा) -  यह पेपर संविधान की 8वीं अनुसूची में शामिल 22 भारतीय भाषाओं में से किसी एक में देना होता है। यह सिर्फ **क्वालिफाइंग** प्रकृति का होता है (300 अंक, न्यूनतम 33% अंक या 90 अंक)। इसके अंक अंतिम मेरिट में नहीं जुड़ते।
-                <br><br>
-                **मुख्य विषय और क्या लिखना होता है:**
-                <ul class="list-disc list-inside ml-4 space-y-1 mt-2">
-                    <li>**निबंध लेखन (Essay Writing):** इसमें उम्मीदवारों को दिए गए विषयों पर एक विस्तृत और सुसंगत निबंध लिखना होता है। यह आपकी विचारशक्ति, विषय की गहराई, तार्किक प्रस्तुति और भाषा पर पकड़ का परीक्षण करता है। निबंध के माध्यम से आपकी विश्लेषणात्मक क्षमता और विचारों को प्रभावी ढंग से व्यक्त करने की कला को परखा जाता है।</li>
-                    <li>**रीडिंग कॉम्प्रिहेंशन (Reading Comprehension):** इस खंड में एक गद्यांश (Passage) दिया जाता है, जिसके आधार पर प्रश्नों के उत्तर देने होते हैं। यह आपकी पढ़ने, समझने और दिए गए पाठ से मुख्य जानकारी निकालने की क्षमता का आकलन करता है। आपको गद्यांश के निहितार्थों को समझना और सटीक उत्तर देना होता है।</li>
-                    <li>**सारांश लेखन (Precis Writing):** इसमें एक लंबा गद्यांश दिया जाता है जिसे आपको एक तिहाई शब्दों में संक्षिप्त करना होता है, साथ ही एक उचित शीर्षक भी देना होता है। यह आपकी संक्षेपण क्षमता, अनावश्यक विवरणों को हटाने और मुख्य बिंदुओं को स्पष्ट रूप से प्रस्तुत करने की कला को दर्शाता है।</li>
-                    <li>**उपयोग और शब्दावली (Usage and Vocabulary):** इस खंड में व्याकरण (Grammar), मुहावरे (Idioms), समानार्थक शब्द (Synonyms), विपरीतार्थक शब्द (Antonyms), एक शब्द प्रतिस्थापन (One-word substitutions) और वाक्य सुधार (Sentence correction) जैसे प्रश्न होते हैं। यह भाषा पर आपकी कमांड, शब्द ज्ञान और वाक्य संरचना की शुद्धता को जांचता है।</li>
-                    <li>**अनुवाद (Translation):** इसमें अंग्रेजी से चुनी हुई भारतीय भाषा में अनुवाद और भारतीय भाषा से अंग्रेजी में अनुवाद करना होता है। यह आपकी द्विभाषी दक्षता और दोनों भाषाओं में विचारों को सही और स्वाभाविक रूप से व्यक्त करने की क्षमता को परखता है। सटीक और स्वाभाविक अनुवाद महत्वपूर्ण होता है।</li>
+                    <!-- FIX: Replacing misplaced UL/backticks with proper DIV and list structure to fix SyntaxError -->
+                    <div class="text-base text-text-light max-w-xl mx-auto space-y-4 text-left">
+                        <p class="mb-2"><strong>पेपर-A (अनिवार्य भारतीय भाषा)</strong> - यह पेपर संविधान की 8वीं अनुसूची में शामिल 22 भारतीय भाषाओं में से किसी एक में देना होता है। यह सिर्फ **क्वालिफाइंग** प्रकृति का होता है (300 अंक, न्यूनतम 33% अंक या 90 अंक)। इसके अंक अंतिम मेरिट में नहीं जुड़ते।</p>
+                        <p class="mb-2"><strong>मुख्य विषय और क्या लिखना होता है:</strong></p>
+                        <ul class="list-disc list-inside ml-4 space-y-2">
+                            <li>**निबंध लेखन (Essay Writing):** इसमें उम्मीदवारों को दिए गए विषयों पर एक विस्तृत और सुसंगत निबंध लिखना होता है। यह आपकी विचारशक्ति, विषय की गहराई, तार्किक प्रस्तुति और भाषा पर पकड़ का परीक्षण करता है। निबंध के माध्यम से आपकी विश्लेषणात्मक क्षमता और विचारों को प्रभावी ढंग से व्यक्त करने की कला को परखा जाता है।</li>
+                            <li>**रीडिंग कॉम्प्रिहेंशन (Reading Comprehension):** इस खंड में एक गद्यांश (Passage) दिया जाता है, जिसके आधार पर प्रश्नों के उत्तर देने होते हैं। यह आपकी पढ़ने, समझने और दिए गए पाठ से मुख्य जानकारी निकालने की क्षमता का आकलन करता है। आपको गद्यांश के निहितार्थों को समझना और सटीक उत्तर देना होता है।</li>
+                            <li>**सारांश लेखन (Precis Writing):** इसमें एक लंबा गद्यांश दिया जाता है जिसे आपको एक तिहाई शब्दों में संक्षिप्त करना होता है, साथ ही एक उचित शीर्षक भी देना होता है। यह आपकी संक्षेपण क्षमता, अनावश्यक विवरणों को हटाने और मुख्य बिंदुओं को स्पष्ट रूप से प्रस्तुत करने की कला को दर्शाता है।</li>
+                            <li>**उपयोग और शब्दावली (Usage and Vocabulary):** इस खंड में व्याकरण (Grammar), मुहावरे (Idioms), समानार्थक शब्द (Synonyms), विपरीतार्थक शब्द (Antonyms), एक शब्द प्रतिस्थापन (One-word substitutions) और वाक्य सुधार (Sentence correction) जैसे प्रश्न होते हैं। यह भाषा पर आपकी कमांड, शब्द ज्ञान और वाक्य संरचना की शुद्धता को जांचता है।</li>
+                            <li>**अनुवाद (Translation):** इसमें अंग्रेजी से चुनी हुई भारतीय भाषा में अनुवाद और भारतीय भाषा से अंग्रेजी में अनुवाद करना होता है। यह आपकी द्विभाषी दक्षता और दोनों भाषाओं में विचारों को सही और स्वाभाविक रूप से व्यक्त करने की क्षमता को परखता है। सटीक और स्वाभाविक अनुवाद महत्वपूर्ण होता है।</li>
+                        </ul>
 
-                    `
-                        <h3 class="font-bold text-xl text-golden-dark mb-2">2. पेपर-B (अंग्रेजी भाषा) - यह पेपर अंग्रेजी में ही होता है और यह भी **क्वालिफाइंग** प्रकृति का होता है (300 अंक, न्यूनतम 33% अंक या 90 अंक)। इसके अंक भी अंतिम मेरिट में नहीं जुड़ते। इस पेपर में उत्तीर्ण होना अनिवार्य है।
-                <br><br>
-                **मुख्य विषय और क्या लिखना होता है:**
-                <ul class="list-disc list-inside ml-4 space-y-1 mt-2">
-                    <li>**निबंध लेखन (Essay Writing):** इसमें उम्मीदवारों को दिए गए विषयों पर एक विस्तृत और सुसंगत निबंध लिखना होता है। यह आपकी लेखन शैली, विचारों की स्पष्टता, तार्किक प्रस्तुति और भाषा पर पकड़ का परीक्षण करता है।</li>
-                    <li>**रीडिंग कॉम्प्रिहेंशन (Reading Comprehension):** इस खंड में एक गद्यांश (Passage) दिया जाता है, जिसके आधार पर प्रश्नों के उत्तर देने होते हैं। यह आपकी पढ़ने, समझने और दिए गए पाठ से मुख्य जानकारी निकालने की क्षमता का आकलन करता है।</li>
-                    <li>**सारांश लेखन (Precis Writing):** इसमें एक लंबा गद्यांश दिया जाता है जिसे आपको एक तिहाई शब्दों में संक्षिप्त करना होता है, साथ ही एक उचित शीर्षक भी देना होता है। यह आपकी संक्षेपण क्षमता, अनावश्यक विवरणों को हटाने और मुख्य बिंदुओं को स्पष्ट रूप से प्रस्तुत करने की कला को दर्शाता है।</li>
-                    <li>**उपयोग और शब्दावली (Usage and Vocabulary):** इस खंड में अंग्रेजी व्याकरण (Grammar), मुहावरे (Idioms), समानार्थक शब्द (Synonyms), विपरीतार्थक शब्द (Antonyms), एक शब्द प्रतिस्थापन (One-word substitutions) और वाक्य सुधार (Sentence correction) जैसे प्रश्न होते हैं। यह भाषा पर आपकी कमांड, शब्द ज्ञान और वाक्य संरचना की शुद्धता को जांचता है।</li>
-                    </ul>
+                        <h3 class="font-bold text-xl text-golden-dark mt-6 mb-2">2. पेपर-B (अंग्रेजी भाषा)</h3>
+                        <p class="mb-2">यह पेपर अंग्रेजी में ही होता है और यह भी **क्वालिफाइंग** प्रकृति का होता है (300 अंक, न्यूनतम 33% अंक या 90 अंक)। इसके अंक भी अंतिम मेरिट में नहीं जुड़ते। इस पेपर में उत्तीर्ण होना अनिवार्य है।</p>
+                        <p class="mb-2"><strong>मुख्य विषय और क्या लिखना होता है:</strong></p>
+                        <ul class="list-disc list-inside ml-4 space-y-2">
+                            <li>**निबंध लेखन (Essay Writing):** इसमें उम्मीदवारों को दिए गए विषयों पर एक विस्तृत और सुसंगत निबंध लिखना होता है। यह आपकी लेखन शैली, विचारों की स्पष्टता, तार्किक प्रस्तुति और भाषा पर पकड़ का परीक्षण करता है।</li>
+                            <li>**रीडिंग कॉम्प्रिहेंशन (Reading Comprehension):** इस खंड में एक गद्यांश (Passage) दिया जाता है, जिसके आधार पर प्रश्नों के उत्तर देने होते हैं। यह आपकी पढ़ने, समझने और दिए गए पाठ से मुख्य जानकारी निकालने की क्षमता का आकलन करता है।</li>
+                            <li>**सारांश लेखन (Precis Writing):** इसमें एक लंबा गद्यांश दिया जाता है जिसे आपको एक तिहाई शब्दों में संक्षिप्त करना होता है, साथ ही एक उचित शीर्षक भी देना होता है। यह आपकी संक्षेपण क्षमता, अनावश्यक विवरणों को हटाने और मुख्य बिंदुओं को स्पष्ट रूप से प्रस्तुत करने की कला को दर्शाता है।</li>
+                            <li>**उपयोग और शब्दावली (Usage and Vocabulary):** इस खंड में अंग्रेजी व्याकरण (Grammar), मुहावरे (Idioms), समानार्थक शब्द (Synonyms), विपरीतार्थक शब्द (Antonyms), एक शब्द प्रतिस्थापन (One-word substitutions) और वाक्य सुधार (Sentence correction) जैसे प्रश्न होते हैं। यह भाषा पर आपकी कमांड, शब्द ज्ञान और वाक्य संरचना की शुद्धता को जांचता है।</li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="mt-8 p-4 bg-red-900/20 border border-red-700/50 rounded-lg shadow-sm text-center">
@@ -730,7 +776,7 @@
                 <p class="text-lg mb-8 max-w-4xl mx-auto">UPSC परीक्षा एक मैराथन है! इसे पास करने के लिए एक अच्छी योजना और बहुत मेहनत की ज़रूरत है।</p>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div>
-                        <h3 class="text-2xl font-bold text-golden-dark mb-4">📚 पढ़ाई के चरण:</h3>
+                        <h3 class="text-2xl font-bold section-heading">📚 पढ़ाई के चरण:</h3>
                         <ol class="relative border-l-4 border-golden-dark pl-6 space-y-8">
                             <li class="timeline-step py-2 -ml-9 pl-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300">
                                 <div class="absolute flex items-center justify-center w-8 h-8 bg-golden-dark rounded-full -left-4 ring-8 ring-white timeline-step font-bold text-lg text-white">1</div>
@@ -750,7 +796,7 @@
                         </ol>
                     </div>
                     <div>
-                        <h3 class="text-2xl font-bold text-golden-dark mb-4">🔄 रिवीजन का जादू:</h3>
+                        <h3 class="text-2xl font-bold section-heading">🔄 रिवीजन का जादू:</h3>
                         <p class="text-lg mb-4">**ज़्यादा पढ़ने वाला नहीं, ज़्यादा रिवाइज करने वाला सफल होता है!**</p>
                         <ul class="list-disc list-inside space-y-2 text-base">
                             <li>**कम पढ़ें, ज़्यादा दोहराएं:** गिनी-चुनी किताबें और नोट्स को ही बार-बार पढ़ें।</li>
@@ -1120,7 +1166,7 @@
                     <ul class="list-disc list-inside space-y-2">
                         <li>**निबंध लेखन (Essay Writing):** इसमें उम्मीदवारों को दिए गए विषयों पर एक विस्तृत और सुसंगत निबंध लिखना होता है। यह आपकी लेखन शैली, विचारों की स्पष्टता, तार्किक प्रस्तुति और भाषा पर पकड़ का परीक्षण करता है।</li>
                         <li>**रीडिंग कॉम्प्रिहेंशन (Reading Comprehension):** इस खंड में एक गद्यांश (Passage) दिया जाता है, जिसके आधार पर प्रश्नों के उत्तर देने होते हैं। यह आपकी पढ़ने, समझने और दिए गए पाठ से मुख्य जानकारी निकालने की क्षमता का आकलन करता है।</li>
-                        <li>**सारांश लेखन (Precis Writing):** इसमें एक लंबा गद्यांश दिया जाता है जिसे आपको एक तिहाई शब्दों में संक्षिप्त करना होता है, साथ ही एक उचित शीर्षक भी देना होता है। यह आपकी संक्षेपण क्षमता, अनावश्यक विवरणों को हटाने और मुख्य बिंदुओं को स्पष्ट रूप से प्रस्तुत करने की कला को दर्शाता है।</li>
+                        <li>**सारांश लेखन (Precis Writing):** इसमें एक लंबा गद्यांश दिया जाता है जिसे आपको एक तिहाई शब्दों में संक्षिप्त करना होता है। यह आपकी संक्षेपण क्षमता, अनावश्यक विवरणों को हटाने और मुख्य बिंदुओं को स्पष्ट रूप से प्रस्तुत करने की कला को दर्शाता है।</li>
                         <li>**उपयोग और शब्दावली (Usage and Vocabulary):** इस खंड में अंग्रेजी व्याकरण (Grammar), मुहावरे (Idioms), समानार्थक शब्द (Synonyms), विपरीतार्थक शब्द (Antonyms), एक शब्द प्रतिस्थापन (One-word substitutions) और वाक्य सुधार (Sentence correction) जैसे प्रश्न होते हैं। यह भाषा पर आपकी कमांड, शब्द ज्ञान और वाक्य संरचना की शुद्धता को जांचता है।</li>
                     </ul>
                 </div>
@@ -1554,7 +1600,7 @@
             'ips': {
                 icon: '👮‍♂️',
                 name: 'भारतीय पुलिस सेवा (IPS)',
-                description: 'IPS अधिकारी देश में कानून और व्यवस्था बनाए रखने के लिए जिम्मेदार होते हैं। ये पुलिस बल का नेतृत्व करते हैं, अपराधों की रोकथाम और जांच करते हैं, और सार्वजनिक सुरक्षा सुनिश्चित करते हैं। इनका काम चुनौतीपूर्ण होता है और इसमें त्वरित निर्णय लेने की क्षमता आवश्यक होती है। ये SP, SSP, DIG जैसे पदों पर कार्य करते हैं।\n\nउदाहरण: एक SP अपने जिले में आपराधिक गतिविधियों को नियंत्रित करता है, जनता की सुरक्षा सुनिश्चित करता है और पुलिसिंग रणनीतियों का नेतृत्व करता है।'
+                description: 'IPS अधिकारी देश में कानून और व्यवस्था बनाए रखने के लिए जिम्मेदार होते हैं। ये पुलिस बल का नेतृत्व करते हैं और अपराधों की रोकथाम और जांच करते हैं। इनका काम चुनौतीपूर्ण होता है और इसमें त्वरित निर्णय लेने की क्षमता आवश्यक होती है। ये SP, SSP, DIG जैसे पदों पर कार्य करते हैं।\n\nउदाहरण: एक SP अपने जिले में आपराधिक गतिविधियों को नियंत्रित करता है, जनता की सुरक्षा सुनिश्चित करता है और पुलिसिंग रणनीतियों का नेतृत्व करता है।'
             },
             'ifos_forest': {
                 icon: '🌳',
@@ -1689,7 +1735,7 @@
             'Assamese (असमिया)', 'Bengali (बांग्ला)', 'Bodo (बोडो)', 'Dogri (डोगरी)',
             'Gujarati (गुजराती)', 'Hindi (हिन्दी)', 'Kannada (कन्नड़)', 'Kashmiri (कश्मीरी)',
             'Konkani (कोंकणी)', 'Maithili (मैथिली)', 'Malayalam (मलयालम)', 'Manipuri (मणिपुरी/मैतेई)',
-            'Marathi (मराठी)', 'Nepali (नेपाली)', 'Odia (उड़िया)', 'Punjabi (पंजाबी)',
+            'Marathi (मराठी)', 'Nepali (नेपाली)', 'Odia (उड़िया)', 'Punjabi (ਪੰਜਾਬੀ)',
             'Sanskrit (संस्कृत)', 'Santhali (संथाली)', 'Sindhi (सिंधी)', 'Tamil (तमिल)',
             'Telugu (तेलुगु)', 'Urdu (उर्दू)'
         ];
