--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
         <!-- CARD GRID 1: GOVT EXAMS -->
        <section id="govt-exam-section" class="govt-exam-guide-section mb-8">
             <div class="text-center mb-6">
-                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All-Govt-Exam-Full-Guide</h2>
+                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Government Job Guide</h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
                 <div class="card" data-modal-target="upscModal" data-keywords="upsc संघ लोक सेवा आयोग civil services ese cse ifos nda cds capf" data-desktop="upsc.png" data-mobile="upsc.png">
@@ -888,8 +888,8 @@
 
         <!-- CARD GRID 2: AI TOOLS -->
         <section id="ai-guide-section" class="ai-full-guide-section mb-8">
-            <div class="text-center mb-6"><br>
-                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All-A.I- Tools Full Guide</h2>
+            <div class="text-center mb-6">
+                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Artificial Inteligence</h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
                 <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5" data-desktop="openai.png" data-mobile="openai.png">
@@ -994,7 +994,7 @@
         <!-- CARD GRID 3: PRIVATE SECTOR -->
         <section id="private-sector-section" class="private-sector-job-guide-section mb-8">
             <div class="text-center mb-6">
-                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All-Private-Jobs-Full-Guide</h2>
+                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Private Job Guide</h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
                 <div class="card" data-modal-target="itSoftwareModal" data-keywords="it software jobs software engineer web developer app developer data scientist analyst ai ml engineer cybersecurity cloud engineer ui ux designer tech support engineer" data-desktop="itsoftys.png" data-mobile="itsoftys.png">
@@ -1145,13 +1145,8 @@
         </section>
 
         <main id="card-grid" class="hidden">
-        </main>
-        
-        <footer class="text-center mt-16 border-t-2 pt-8 border-gray-700">
-            <p class="text-gray-400 text-lg font-medium"> आपकी सफलता के लिए हार्दिक शुभकामनाएँ।</p>
-        </footer>
+        </main>  
     </div>
-    
     <!-- MODALS (All modals remain the same as they were correct) -->
     <div id="upscModal" class="modal-overlay">
         <div class="modal-content">
