--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
                 <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Artificial Inteligence</h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
-                <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5" data-desktop="allai.png" data-mobile="openai.png">
+                <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5" data-desktop="allai.png" data-mobile="allai">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🤖</div>
@@ -900,7 +900,7 @@
                         <p class="card-sub-heading">GPT-4.5, Codex, DALL·E 3</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="anthropicModal" data-keywords="anthropic claude 2 claude 3 opus sonnet haiku" data-desktop="allai.png" data-mobile="claude.png">
+                <div class="card" data-modal-target="anthropicModal" data-keywords="anthropic claude 2 claude 3 opus sonnet haiku" data-desktop="allai.png" data-mobile="allai">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🖋️</div>
