--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
                 <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Artificial Inteligence</h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
-                <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5" data-desktop="allai.png" data-mobile="allai">
+                <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🤖</div>
@@ -900,7 +900,7 @@
                         <p class="card-sub-heading">GPT-4.5, Codex, DALL·E 3</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="anthropicModal" data-keywords="anthropic claude 2 claude 3 opus sonnet haiku" data-desktop="allai.png" data-mobile="allai">
+                <div class="card" data-modal-target="anthropicModal" data-keywords="anthropic claude 2 claude 3 opus sonnet haiku" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🖋️</div>
@@ -908,7 +908,7 @@
                         <p class="card-sub-heading">Claude 2, Claude 3 (Opus, Sonnet, Haiku)</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="googleAIModal" data-keywords="google gemini gato sima" data-desktop="gemini.png" data-mobile="allai.png">
+                <div class="card" data-modal-target="googleAIModal" data-keywords="google gemini gato sima" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🧠</div>
@@ -916,7 +916,7 @@
                         <p class="card-sub-heading">Gemini, Gato, SIMA</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="metaAIModal" data-keywords="meta llama 2 llama 3.2 vision llama 4" data-desktop="metaai.png" data-mobile="allai.png">
+                <div class="card" data-modal-target="metaAIModal" data-keywords="meta llama 2 llama 3.2 vision llama 4" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🌐</div>
@@ -924,7 +924,7 @@
                         <p class="card-sub-heading">LLaMA 2, LLaMA 3.2 Vision</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="mistralAIModal" data-keywords="mistral mixtral mistral small medium" data-desktop="mistrelai.png" data-mobile="allai.png">
+                <div class="card" data-modal-target="mistralAIModal" data-keywords="mistral mixtral mistral small medium" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🌪️</div>
@@ -932,7 +932,7 @@
                         <p class="card-sub-heading">Mixtral, Mistral Small/Medium</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="deepseekModal" data-keywords="deepseek r1 deepseek v3" data-desktop="deepseekai.png" data-mobile="allai.png">
+                <div class="card" data-modal-target="deepseekModal" data-keywords="deepseek r1 deepseek v3" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🔍</div>
@@ -940,7 +940,7 @@
                         <p class="card-sub-heading">R1, DeepSeek‑V3 variants</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="amazonAIModal" data-keywords="amazon nova micro lite pro text image video" data-desktop="amazonnovaai.png" data-mobile="allai.png">
+                <div class="card" data-modal-target="amazonAIModal" data-keywords="amazon nova micro lite pro text image video" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🛒</div>
@@ -948,7 +948,7 @@
                         <p class="card-sub-heading">Nova Micro, Lite, Pro</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="xAIModal" data-keywords="xai grok 4" data-desktop="grokai.png" data-mobile="allai.png">
+                <div class="card" data-modal-target="xAIModal" data-keywords="xai grok 4" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">✖️</div>
@@ -956,7 +956,7 @@
                         <p class="card-sub-heading">Grok 4</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="alibabaModal" data-keywords="alibaba qwen 2.5" data-desktop="alibabaquen.png" data-mobile="allai.png">
+                <div class="card" data-modal-target="alibabaModal" data-keywords="alibaba qwen 2.5" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">📦</div>
@@ -964,7 +964,7 @@
                         <p class="card-sub-heading">Qwen 2.5</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="perplexityModal" data-keywords="perplexity ai answer engine conversational search" data-desktop="perplexityai.png" data-mobile="allai.png">
+                <div class="card" data-modal-target="perplexityModal" data-keywords="perplexity ai answer engine conversational search" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">❓</div>
@@ -972,7 +972,7 @@
                         <p class="card-sub-heading">Conversational Search</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="aiUtilitiesModal" data-keywords="prompt engineering generateprompt midjourney prompts runwayml elevenlabs" data-desktop="gpai.png" data-mobile="allai.png">
+                <div class="card" data-modal-target="aiUtilitiesModal" data-keywords="prompt engineering generateprompt midjourney prompts runwayml elevenlabs" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">🛠️</div>
