--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
                         <p class="card-sub-heading">Prompting, Video, Audio</p>
                     </div>
                 </div>
-                <div class="card" data-modal-target="othersAIModal" data-keywords="others minimax pixtral" data-desktop="othersai.png" data-mobile="allai.png">
+                <div class="card" data-modal-target="othersAIModal" data-keywords="others minimax pixtral" data-desktop="allai.png" data-mobile="allai.png">
                     <div class="bg-overlay"></div>
                     <div class="card-content">
                         <div class="card-icon">✨</div>
