--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@
             </div>
         </section> 
         </main>  
-    </div>
+    </div><br>
     <!-- MODALS (All modals remain the same as they were correct) -->
     <div id="upscModal" class="modal-overlay">
         <div class="modal-content">
