--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
         #progress-bar-container {
             /* Deeper inner shadow for cavity effect */
             box-shadow: 0 4px 18px rgba(0, 0, 0, 0.8), inset 0 2px 5px rgba(0, 0, 0, 0.9);
-            /* Added margin for breathing room */
-            margin-top: 2rem; 
+            /* Removed unnecessary margin in CSS, controlled by Tailwind class 'mt-4' */
         }
         #progress-bar {
             /* Metallic Gold Gradient Fill */
@@ -135,7 +134,6 @@
             box-shadow: 
                 0 0 18px 4px var(--electric-gold-glow), /* Outer glow */
                 inset 0 0 8px 1px rgba(255, 255, 255, 0.6); /* Inner highlight */
-            /* Removed filter: brightness(1.2); as gradient handles shine */
             filter: none; 
         }
 
@@ -156,7 +154,8 @@
             Skillaura
         </h1>
         
-        <!-- Tagline (Gold Gradient Effect) --><p class="text-lg sm:text-xl font-semibold mt-2 mb-8" style="
+        <!-- Tagline (Gold Gradient Effect) -->
+        <!-- Reduced mb-8 to mb-2 for minimal gap --><p class="text-lg sm:text-xl font-semibold mt-2 mb-2" style="
             background-image: linear-gradient(45deg, var(--electric-gold-glow), var(--color-secondary)); 
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -167,7 +166,8 @@
 
         <!-- Progress Bar (Attractive) -->
         <!-- Progress Bar Title (Static) REMOVED -->
-        <div id="progress-bar-container" class="w-full h-5 bg-gray-800 rounded-full overflow-hidden border-2 border-color-secondary">
+        <!-- Height reduced from h-5 (20px) to h-3 (12px) and mt-4 added for minimal gap -->
+        <div id="progress-bar-container" class="w-full h-3 mt-4 bg-gray-800 rounded-full overflow-hidden border-2 border-color-secondary">
             <div id="progress-bar" class="h-full bg-electric-gold-glow transition-all duration-300 ease-in-out" style="width: 0%;"></div>
         </div>
         
@@ -175,7 +175,7 @@
 
     <script>
         const SPLASH_DURATION = 3500; // Increased to 3.5 seconds for more effect time
-        const REDIRECT_URL = 'main.html'; // Your main file
+        const REDIRECT_URL = 'index.html'; // Your main file
 
         document.addEventListener('DOMContentLoaded', () => {
             const body = document.body;
