--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
     <script>
         const SPLASH_DURATION = 3500; // Increased to 3.5 seconds for more effect time
-        const REDIRECT_URL = 'index.html'; // Your main file
+        const REDIRECT_URL = 'main.html'; // Your main file
 
         document.addEventListener('DOMContentLoaded', () => {
             const body = document.body;
