--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
         
         <!-- Company Name --><h1 class="text-4xl sm:text-5xl font-extrabold text-white mt-6 drop-shadow-lg tracking-wider shimmer-text">
-            Skillaura
+            SKILLAURA
         </h1>
         
         <!-- Tagline (Gold Gradient Effect) -->
