--- a/main.html
+++ b/main.html
@@ -560,8 +560,9 @@
                   <!-- Logo Image -->
                   <img src="ytglogo.png" alt="Your True Guide Logo" class="h-10 w-10 sm:h-12 sm:w-12 mr-3 rounded-full shadow-lg border border-primary/50" onerror="this.onerror=null;this.src='https://placehold.co/48x48/FFD700/1A1C20?text=YTG';" />
                   <!-- Text Color set to White/Light -->
-                  <span class="text-xl sm:text-3xl font-extrabold text-white transition-colors tracking-tight drop-shadow-md">
-                    Skillaura <span class="text-primary"></span>
+                   <span class="text-xl sm:text-3xl font-extrabold text-white transition-colors tracking-tight drop-shadow-md flex items-center">
+    <img src="skillora.png" alt="Logo" class="h-[35px] w-auto object-contain inline-block" />
+    <span class="text-primary"></span>
                   </span>
                 </a>
 
