--- a/main.html
+++ b/main.html
@@ -626,7 +626,9 @@
                     
                     <div class="mb-4 pb-4 border-b border-primary/50">
                         <p class="text-sm font-light text-text-secondary">Welcome to</p>
-                        <h2 class="text-3xl font-black text-primary drop-shadow-md">Skillaura</h2>
+                        <span class="text-xl sm:text-3xl font-extrabold text-white transition-colors tracking-tight drop-shadow-md flex items-center">
+    <img src="skillora.png" alt="Logo" class="h-[35px] w-auto object-contain inline-block" />
+    <span class="text-primary"></span>
                         <p class="text-xs font-semibold text-text-secondary">Your True Guide!</p>
                     </div>
                     
