--- a/main.html
+++ b/main.html
@@ -628,9 +628,10 @@
                         <p class="text-sm font-light text-text-secondary">Welcome to</p>
                         <span class="text-xl sm:text-3xl font-extrabold text-white transition-colors tracking-tight drop-shadow-md flex items-center">
     <img src="skillora.png" alt="Logo" class="h-[35px] w-auto object-contain inline-block" />
-    <span class="text-primary"></span>
+    <span class="text-primary">
                         <p class="text-xs font-semibold text-text-secondary">Your True Guide!</p>
                     </div>
+                  </span>
                     
                     <!-- Navigation Links - Text set to white -->
                     <a href="#govt-exam-section" class="text-lg text-white hover:text-primary transition-all duration-300 transform hover:translate-x-1 flex items-center p-2 rounded-lg hover:bg-white/10 menu-link">
