--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
     <script>
         const SPLASH_DURATION = 5500; // 3.5 seconds
-        const REDIRECT_URL = 'index.html'; // Your main file
+        const REDIRECT_URL = 'main.html'; // Your main file
         const HAS_VISITED_KEY = 'hasVisitedSplash'; // localStorage key
 
         // Thematic Loading Text Array
