--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <!-- Company Name -->
         <!-- mt-2 for minimal gap --><br><br>
         <h1 class="text-4xl sm:text-5xl font-extrabold text-white mt-2 drop-shadow-lg tracking-wider shimmer-text">
-            Skillio
+            We Are Skilli
         </h1>
         
         <!-- Tagline (Gold Gradient Effect) -->
@@ -243,7 +243,7 @@
 
     <script>
         const SPLASH_DURATION = 5500; // 3.5 seconds
-        const REDIRECT_URL = 'main.html'; // Your main file
+        const REDIRECT_URL = 'https://crapd.in/main.html'; // Your main file
         const HAS_VISITED_KEY = 'hasVisitedSplash'; // localStorage key
 
         // Thematic Loading Text Array
