--- a/main.html
+++ b/main.html
@@ -626,7 +626,7 @@
                     
                     <div class="mb-4 pb-4 border-b border-primary/50">
                         <p class="text-sm font-light text-text-secondary">Welcome to</p>
-                        <h2 class="text-3xl font-black text-primary drop-shadow-md">SkilliO</h2>
+                        <h2 class="text-3xl font-black text-primary drop-shadow-md">Skilli</h2>
                         <p class="text-xs font-semibold text-text-secondary">Your True Guide!</p>
                     </div>
                  
