--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <!-- Company Name -->
         <!-- mt-2 for minimal gap --><br><br>
         <h1 class="text-4xl sm:text-5xl font-extrabold text-white mt-2 drop-shadow-lg tracking-wider shimmer-text">
-            We Are Skilli
+            Skilli
         </h1>
         
         <!-- Tagline (Gold Gradient Effect) -->
