--- a/main.html
+++ b/main.html
@@ -3326,5 +3326,11 @@
             initializeSlider();
         });
     </script>
+    <script>
+  document.addEventListener("DOMContentLoaded", function () {
+      alert("USER-AGENT:\n\n" + navigator.userAgent);
+  });
+</script>
+
 </body>
 </html>
