--- a/main.html
+++ b/main.html
@@ -109,6 +109,19 @@
             transition: background-color 0.7s ease-in-out, color 0.7s ease-in-out;
         }
 
+        /* --- FIXED BACKGROUND MEDIA CONTAINER (Video Removed, Image retained) --- */
+        #fixed-media-background {
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            z-index: -10; /* Ensure it's behind everything */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            opacity: 0.5; /* Subtle visibility */
+            /* Mobile Image used for all screen sizes now */
+            background-image: url('imap.png');
+        }
+
         /* Fixed Header Styles */
         .fixed-header-container {
             position: fixed;
